Dark Mode CSS issue fix

--- a/new-invoice-frontend/main/src/app/common-components/history/history.component.scss
+++ b/new-invoice-frontend/main/src/app/common-components/history/history.component.scss
@@ -18,3 +18,7 @@
 .table-bordered tbody tr th {
     border-left: none !important;
 }
+
+.dark .media-title {
+    color: white !important;
+}
