--- a/new-invoice-frontend/main/src/app/settings/allsettings/allsettings.component.scss
+++ b/new-invoice-frontend/main/src/app/settings/allsettings/allsettings.component.scss
@@ -12,3 +12,7 @@
   object-fit: contain;
   background-color: #fff;
 }
+
+.top-sell {
+  cursor: pointer;
+}
